<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.cm.fragments.AddFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <Button
            android:id="@+id/saveCoffeeBtn"
            style="@android:style/Holo.Light.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/coffeeRatingBar"
            android:layout_marginTop="20dp"
            android:drawableTop="@drawable/ic_save_coffee"
            android:text="@string/saveCoffeeBtn" />

        <RatingBar
            android:id="@+id/coffeeRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:numStars="5"
            android:progressTint="@color/bannerBGColor"
            android:rating="2"
            android:stepSize="0.5" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/coffeeRatingBar"
            android:layout_alignParentTop="true"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:inputType="textShortMessage">

            <requestFocus />

        </EditText>

        <EditText
            android:id="@+id/shopEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/nameEditText"
            android:layout_below="@+id/nameEditText"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textShortMessage"></EditText>

        <TextView
            android:id="@+id/ratingTextView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/priceTextView"
            android:layout_below="@+id/priceEditText"
            android:layout_marginTop="31dp"
            android:text="@string/coffeeRatingLbl"
            android:textColor="@color/appFontColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_alignBaseline="@+id/nameEditText"
            android:layout_alignBottom="@+id/nameEditText"
            android:layout_toStartOf="@+id/nameEditText"
            android:gravity="top"
            android:text="@string/coffeeNameLbl"
            android:textColor="@color/appFontColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/shopEditText"
            android:layout_below="@+id/shopEditText"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/shopTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/shopEditText"
            android:layout_alignBottom="@+id/shopEditText"
            android:layout_alignStart="@+id/nameTextView"
            android:text="@string/coffeeShopLbl"
            android:textColor="@color/appFontColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/priceEditText"
            android:layout_alignBottom="@+id/priceEditText"
            android:layout_alignStart="@+id/shopTextView"
            android:text="@string/coffeePriceLbl"
            android:textColor="@color/appFontColor"
            android:textSize="18sp" />

    </RelativeLayout>

</FrameLayout>
