<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.cm.fragments.HelpFragment">

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        style="@style/appTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        android:layout_marginTop="47dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/appHelpTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/activeBGColor"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help72"
            tools:ignore="ContentDescription"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView1" />
    </RelativeLayout>


    <TextView
        android:id="@+id/relativeLayout"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:gravity="top"
        android:text="@string/appHelp"
        android:textAlignment="center"
        android:textColor="@color/appFontColor"
        android:textSize="18sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/footerLinearLayout"
        style="@style/footer"
        android:background="@color/bannerBGColor"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="371dp"
        tools:layout_conversion_absoluteWidth="384dp"
        tools:layout_conversion_absoluteHeight="40dp"
        android:layout_height="0dp"
        android:layout_width="0dp"
        tools:layout_editor_absoluteY="371dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/appWebsite"
            android:textColor="@color/bgColor" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="234dp"
        android:layout_height="74dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:gravity="top"
        android:text="@string/appHelpExtra"
        android:textAlignment="center"
        android:textColor="@color/appFontColor"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barTextView"
        tools:layout_conversion_absoluteHeight="70dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_conversion_absoluteX="5dp"
        tools:layout_conversion_absoluteY="170dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_smiley"
        tools:ignore="ContentDescription"
        tools:layout_conversion_absoluteX="170dp"
        tools:layout_conversion_absoluteY="193dp"
        tools:layout_conversion_absoluteWidth="44dp"
        tools:layout_conversion_absoluteHeight="58dp"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toBottomOf="@+id/TextView01"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/barTextView"
        style="@style/banner"
        android:layout_width="384dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RelativeLayout1"
        tools:layout_conversion_absoluteHeight="20dp"
        tools:layout_conversion_absoluteWidth="384dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="149dp"
        android:layout_marginStart="8dp" />


</android.support.constraint.ConstraintLayout>
